examples/test/testpolicy17970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17970
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key41: value2
      key24: value35
      key44: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value7
          key17: value8
      podSelector:
        matchLabels:
          key5: value12
          key0: value5
          key12: value22
